Made changes to the layout and style to avoid the movie posters clipping eachother on hover

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #333;
+    background-color: #222;
     font-family: arial, helvetica, sans-serif;
     font-size: 12px;
     color: whitesmoke;
@@ -19,6 +19,7 @@ header {
 }
 
 h1 {
+    color: #ffffff;
     text-align: center;
     justify-self: center;
     align-self: start;
@@ -26,18 +27,36 @@ h1 {
     margin: 0;
 }
 
+h1 a:hover, a:visited, a:link, a:active {
+    text-decoration: none;
+}
+
 h2 {
+    background-color: #161616;
+    max-width: fit-content;
+    padding: 0.3rem;
     font-size: 30px;
     margin-bottom: 5px;
     margin-top: 0;
     margin-left: 5px;
+    border-top-left-radius: 0.2rem;
+    border-top-right-radius: 0.2rem;
+    border-bottom-left-radius: 0.2rem;
+    border-bottom-right-radius: 0.2rem;
 }
 
 h3 {
+    background-color: #131313;
+    padding: 0.3rem;
     font-size: 20px;
+    text-align: center;
     align-self: flex-end;
     justify-self: center;
     margin-top: 10px;
+    border-top-left-radius: 0.2rem;
+    border-top-right-radius: 0.2rem;
+    border-bottom-left-radius: 0.2rem;
+    border-bottom-right-radius: 0.2rem;
 }
 
 h5 {
@@ -55,10 +74,26 @@ h5 {
     width: 400px;
 }
 
+.container {
+    margin-left: 0.5rem;
+    padding-left: 1rem;
+    padding-top: 0.5rem;
+    background-color: #111;
+    border-top-left-radius: 0.3rem;
+    border-top-right-radius: 0.3rem;
+    border-bottom-left-radius: 0.3rem;
+    border-bottom-right-radius: 0.3rem;
+}
+
 .section {
     display: flex;
     width: 100%;
     overflow-x: auto
+}
+
+.content {
+    display: grid;
+    grid-template-columns: 100%;
 }
 
 .content img {
@@ -69,13 +104,12 @@ h5 {
 }
 
 .content img:hover {
-    margin-left: 0 40px;
-    transform: scale(1.1);
+    margin-top: 8px;
+    margin-left: 8px;
+    margin-right: 8px;
+    margin-bottom: 8px;
+    transform: scale(1.05);
     cursor: pointer
-}
-
-.content {
-    display: grid;
 }
 
 .details {
